# service_app

./: .env.example  README.md  pyproject.toml  pytest.ini  setup.cfg
app/: dependencies.py  main.py
app/api/: github_routes.py  routes.py  storage_routes.py
app/clients/: github.py  github_client.py
app/core/: config.py  exceptions.py  json_utils.py  types.py
app/schemas/: repo_schemas.py  schemas.py
app/services/: github_service.py
app/storage/: base.py  in_memory.py
tests/: conftest.py  test_repos.py  test_service.py  test_storage.py  test_users.py
