[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-sdk"
version = "0.1.0"
description = "A GitHub SDK with FastAPI and in-memory storage."
requires-python = ">=3.11"
# Main dependencies for the project
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.44.0",
  "httpx==0.28.1",
  "pydantic==2.13.1",
  "pydantic-settings==2.13.1",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
# Development dependencies for testing, linting, and type checking
dev = [
  "pytest==9.0.3",
  "isort==8.0.1",
  "pytest-asyncio==1.3.0",
  "mypy==1.20.1",
  "flake8==7.3.0",
  "wemake-python-styleguide==1.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["app"]